--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ html{
 
 body{
   font:normal 75% Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 canvas{
@@ -88,7 +89,7 @@ canvas{
 #particles-js{
   width: 100%;
   height: 100%;
-  background-color:#000000;
+  background-color:#6199a5;
   background-image: url('');
   background-size: cover;
   background-position: 50% 50%;
