--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,16 @@ html{
 body{
   font:normal 75% Arial, Helvetica, sans-serif;
   overflow: hidden;
+  background-image: url(/bg.jpg);
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.header
+{
+  background-image: url(/bg.jpg);
+  -webkit-background-size: cover;
+  background-size: cover;
 }
 
 canvas{
@@ -83,15 +93,27 @@ canvas{
   border-radius: 0 0 3px 3px;
 }
 
+.text {
+	position: absolute;
+	top: 50%;
+	right: 50%;
+	transform: translate(50%,-50%);
+	color: white;
+  max-width: 90%;
+  font-size: 20px;
+	padding: 2em 3em;
+	text-shadow: 2px 2px 2px #131415;
+	font-family: 'Cursive', cursive;
+}
 
 /* ---- particles.js container ---- */
 
 #particles-js{
   width: 100%;
   height: 100%;
-  background-color:#6199a5;
-  background-image: url('');
-  background-size: cover;
-  background-position: 50% 50%;
+  background-image: url(https://marcbruederlin.github.io/particles.js/img/background.jpg) !important;
+  background-position: bottom;
   background-repeat: no-repeat;
+  background-color: black;
+  background-size: cover;
 }
