--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ canvas{
   font-size: 20px;
 	padding: 2em 3em;
 	text-shadow: 2px 2px 2px #131415;
-	font-family: 'Cursive', cursive;
+	font-family: 'Sans-Serif', sans-serif;
 }
 
 /* ---- particles.js container ---- */
